Refactor assembly tasks and remove unused code from simple.asm; add new L7 assembly program and related files

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "command": "C:/TASM/DOSBox.exe",
             "args": [
                 "-noconsole",
-                "-fullscreen",
+                // "-fullscreen",
                 "-c",
                 "mount c C:/Users/amita/OneDrive/8086_ASM",
                 "-c",
